--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "class-transformer": "^0.5.1",
     "classnames": "^2.3.2",
     "i18next": "~23.4.0",
-    "inversify-sugar": "^0.5.8",
+    "inversiland": "^0.6.0",
     "mobx": "^6.10.2",
     "mobx-react": "^9.0.1",
     "react": "18.0.0",
@@ -27,6 +27,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
+    "reflect-metadata": "^0.2.2",
     "zod": "^3.21.4",
     "zod-i18n-map": "~2.14.0"
   },
